namespaces/tnyclick/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tnyclick
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
