namespaces/tnyclick/referencegrant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tnyclick
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-to-tnyclick-services
  namespace: tnyclick
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
