namespaces/tnyclick/10-tnyclick.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tnyclick-tls-route
  namespace: tnyclick
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - "tny.click"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tnyclick
          namespace: tnyclick
          port: 8080
---
apiVersion: v1

kind: Service
metadata:
  name: tnyclick
  namespace: tnyclick
spec:
  selector:
    app: tnyclick
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tnyclick
  namespace: tnyclick
spec:
  selector:
    matchLabels:
      app: tnyclick
  template:
    metadata:
      labels:
        app: tnyclick
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tnyclick
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
          image: ghcr.io/evanjarrett/go-tnyclick:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: media
              mountPath: /media
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: media
          emptyDir: {}
